# gcj

./: .gitignore
2014/Round1C/A/: GNUmakefile
2014/Round1C/B/: B-test.in  B.cpp  B.out  B2.cpp  GNUmakefile  trial.out  trial2.out
2014/qual/: gcj2014qual.cabal
2014/qual/A/: A.hs
2014/qual/B/: B-small-attempt0.out.txt  B.hs  Main.hs
2014/qual/C/: C.hs
2014/qual/D/: D.hs  TestD.hs
2015/qual/A/: A.hs
2015/qual/B/: B.hs
2015/qual/C/: C-large.out  C.hs
2016/Round1A/A/: A-small-attempt0.in  A-small-attempt0.out  A.hs
2016/Round1A/B/: B-sample.txt  B-small-attempt0.in  B-small-attempt0.out  B.hs
2016/Round1A/C/: C  C.cpp  C.hs
2016/qual/A/: A.hs  gen.hs
2016/qual/B/: B-small-attempt0.out  B.hs
2016/qual/C/: C.hs
2016/qual/D/: D-small-attempt0.out  D.hs  D2.hs
2017/: gcj2017.cabal
2017/app/qual/A/: A.cpp  A.hs
2017/app/qual/B/: B.hs
2017/app/qual/C/: C-small-1-attempt0.out  C-small-2-attempt0.out  C.hs
2017/app/qual/D/: D-small-practice.out  D-small.hs  D.hs
2017/app/round1A/: T.cpp
2017/app/round1A/A/: A-large.in  A-large.out  A-small-attempt0.in  A-small-attempt0.out
2017/app/round1A/B/: B-small-attempt0.in  B-small-attempt0.out  B.cpp  B.hs
2017/app/round1A/C/: C-small.hs
