name:                gcj2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
-- license-file:        LICENSE
author:              Wei He
maintainer:
copyright:           n/a
category:            Simple
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

-- executable gcj2017-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , gcj2017
--   default-language:    Haskell2010

executable gcj2017-qual-A
  hs-source-dirs:      app/qual/A
  main-is:             A.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable gcj2017-qual-B
  hs-source-dirs:      app/qual/B
  main-is:             B.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable gcj2017-qual-C
  hs-source-dirs:      app/qual/C
  main-is:             C.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable gcj2017-qual-D
  hs-source-dirs:      app/qual/D
  main-is:             D.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , fgl
  default-language:    Haskell2010

-- test-suite gcj2017-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , gcj2017
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/hhewei/gcj2017
